<resources>
    <string name="app_name">Bonplant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="home">Home</string>
    <string name="shop">Shop</string>
    <string name="order_history">Order History</string>
    <string name="bills">Bills</string>
    <string name="account">Account</string>
    <string name="about_us">About Us</string>
    <string name="action_logout">Logout</string>
    <string name="username">zonetwyn</string>
    <string name="picture">Z</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_message">Which type of account do you want to create?</string>
    <string name="enterprise">Enterprise</string>
    <string name="personal">Personal</string>
    <string name="next">Next</string>
    <string name="enterprise_title">Enterprise</string>
    <string name="prev">Prev</string>
    <string name="submit">Submit</string>
    <string name="enterprise_name">Enterprise name</string>
    <string name="address">Address</string>
    <string name="city">City</string>
    <string name="zipCode">Zip code</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="username_label">Pseudo</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="card_holder">Fullname</string>
    <string name="card_number">Card number</string>
    <string name="cardDate">10/21</string>
    <string name="cardCvc">CVC</string>
    <string name="personal_title">Personal</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="i_have_already_read_and_accept_terms_of_use">I have already read and accept terms of use</string>
    <string name="save_card_information_for_later_use">Save card information for later use?</string>
    <string name="sign_in_progress">Connexion in progress</string>
    <string name="action_search">Search</string>
    <string name="key_words">Key words</string>
    <string name="filters">Filters</string>
    <string name="fruits">Fruits</string>
    <string name="category">Category</string>
    <string name="distance">Distance</string>
    <string name="one">1 Km</string>
    <string name="five">5 Km</string>
    <string name="ten">10 Km (+)</string>
    <string name="apply">Apply</string>
    <string name="vegetables">Vegetables</string>
    <string name="title_activity_maps">Map</string>
    <string name="product_name">Tomatoes</string>
    <string name="product_status">Available</string>
    <string name="product_price">1000$ / Kg</string>
    <string name="shop_name">Delicious Things</string>
    <string name="shop_profile">(See profile)</string>
    <string name="quantity">Quantity</string>
    <string name="add_to_cart">Add</string>
    <string name="times">X</string>
    <string name="product_price_label">1000</string>
    <string name="equals">=</string>
    <string name="product_total_price">2000</string>
    <string name="total">Total</string>
    <string name="total_value">4000$</string>
    <string name="checkout">Checkout</string>
    <string name="two">2</string>
    <string name="title_activity_shop">ShopActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>
