<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_shop"
            android:icon="@drawable/ic_shop"
            android:title="@string/shop" />
        <item
            android:id="@+id/nav_order_history"
            android:icon="@drawable/ic_order_history"
            android:title="@string/order_history" />
        <item
            android:id="@+id/nav_bills"
            android:icon="@drawable/ic_bills"
            android:title="@string/bills" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_account"
            android:title="@string/account" />
        <item
            android:id="@+id/nav_about_us"
            android:icon="@drawable/ic_about"
            android:title="@string/about_us" />
    </group>

</menu>
