<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="220dp"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:padding="16dp">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bordered">

        <EditText
            android:id="@+id/query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_not_bordered"
            android:drawableStart="@drawable/ic_search_flat"
            android:drawablePadding="8dp"
            android:textSize="12sp"
            android:hint="@string/key_words" />

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/filtersLabel"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_marginEnd="8dp"
            android:text="@string/filters"
            android:textColor="@color/colorMediumBlack"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/headerFilter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/filters"
            android:src="@drawable/ic_filter_list_black" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="13sp"
        android:text="@string/category" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/filters_item_unselected"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"
            android:textColor="@color/colorMediumBlack"
            android:text="@string/fruits" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/filters_item_unselected"
            android:layout_marginStart="8dp"
            android:textSize="12sp"
            android:textColor="@color/colorMediumBlack"
            android:text="@string/vegetables" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textSize="13sp"
        android:text="@string/distance" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/filters_item_unselected"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"
            android:textColor="@color/colorMediumBlack"
            android:text="@string/one" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/filters_item_unselected"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"
            android:textColor="@color/colorMediumBlack"
            android:text="@string/five" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/filters_item_unselected"
            android:layout_marginEnd="8dp"
            android:textSize="12sp"
            android:textColor="@color/colorMediumBlack"
            android:text="@string/ten" />

    </LinearLayout>

    <Button
        android:id="@+id/apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/primary_button_rounded"
        android:layout_gravity="bottom"
        android:textColor="@color/colorWhite"
        android:textSize="13sp"
        android:text="@string/apply" />

</LinearLayout>