<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="false"
    android:layout_margin="8dp"
    android:background="@color/colorWhite"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/tomate" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorMediumBlack"
                    android:text="@string/product_name"
                    android:textSize="15sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:background="@drawable/product_available"
                        android:textColor="@color/colorWhite"
                        android:text="@string/product_status"
                        android:textSize="12sp" />

                </FrameLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:text="@string/product_price"
                    android:textSize="16sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="8dp"
                            android:src="@drawable/ic_shop_small" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="4dp"
                            android:text="@string/shop_name"
                            android:textSize="13sp" />

                        <TextView
                            android:id="@+id/seeProfile"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:textColor="@color/colorMediumBlack"
                            android:text="@string/shop_profile"
                            android:textSize="12sp" />

                    </LinearLayout>

                </FrameLayout>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#E4E4E4" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:background="@drawable/edittext_bordered">

                <EditText
                    android:id="@+id/quantity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_not_bordered"
                    android:inputType="number"
                    android:textSize="12sp"
                    android:hint="@string/quantity" />

            </FrameLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMediumBlack"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/times" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_bordered_plain"
                android:textColor="@color/colorMediumBlack"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:textSize="12sp"
                android:text="@string/product_price_label" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorMediumBlack"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/equals" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/textview_bordered_plain"
                android:textColor="@color/colorMediumBlack"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:textSize="12sp"
                android:text="@string/product_total_price" />

            <TextView
                android:id="@+id/addToCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:background="@drawable/secondary_button_rounded"
                android:textColor="@color/colorMediumBlack"
                android:layout_marginStart="8dp"
                android:textSize="13sp"
                android:text="@string/add_to_cart" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>