<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".fragments.SignUpEnterpriseFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="14sp"
            android:text="Please fill your credit card information to process payment for your registration" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/edittext_bordered">

            <EditText
                android:id="@+id/cardHolder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_not_bordered"
                android:textSize="14sp"
                android:hint="@string/card_holder" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/edittext_bordered">

            <EditText
                android:id="@+id/cardNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_not_bordered"
                android:textSize="14sp"
                android:hint="@string/card_number" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="16dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:background="@drawable/edittext_bordered">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_not_bordered"
                    android:textSize="14sp"
                    android:hint="@string/cardDate" />

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/edittext_bordered">

                <EditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edittext_not_bordered"
                    android:textSize="14sp"
                    android:hint="@string/cardCvc" />

            </FrameLayout>

        </LinearLayout>

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textColor="@color/colorMediumBlack"
            android:text="@string/save_card_information_for_later_use" />

        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorMediumBlack"
            android:text="@string/i_have_already_read_and_accept_terms_of_use" />

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/primary_button_rounded"
            android:layout_marginTop="32dp"
            android:textColor="@color/colorWhite"
            android:text="@string/submit" />

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>