<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">

    <include
        layout="@layout/toolbar_white" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:gravity="center"
                android:textSize="15sp"
                android:text="@string/type_message" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp">

                <CheckBox
                    android:id="@+id/personalCbx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorMediumBlack"
                    android:text="@string/personal" />

                <CheckBox
                    android:id="@+id/enterpriseCbx"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorMediumBlack"
                    android:text="@string/enterprise" />

            </RadioGroup>

            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/primary_button_rounded"
                android:layout_marginTop="32dp"
                android:textColor="@color/colorWhite"
                android:text="@string/next" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</LinearLayout>